--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -18,3 +18,43 @@
     font-weight: 700;
     font-style: normal;
 }
+
+/* icomoon */
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/fonts/icomoon.eot?kktlfv');
+    src:  url('../fonts/fonts/icomoon.eot?kktlfv#iefix') format('embedded-opentype'),
+      url('../fonts/fonts/icomoon.ttf?kktlfv') format('truetype'),
+      url('../fonts/fonts/icomoon.woff?kktlfv') format('woff'),
+      url('../fonts/fonts/icomoon.svg?kktlfv#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-logotype:before {
+    content: "\e900";
+  }
+  .icon-logo:before {
+    content: "\e903";
+  }
+  .icon-pinterest:before {
+    content: "\ead1";
+  }
+  
