--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,26 @@
 * {
-    font-family: 'Museo Sans', sans-serif;
+    box-sizing: border-box;
+    h1, h2, h2, p {
+        margin: 0;
+    }
+    body {
+        font-family: 'Museo Sans', sans-serif;
+        color: #0d0d0d;
+    }
 }
+
+
+@import 'base/variables';
+
+.container {
+    max-width: 970px;
+    padding: 0 10px;
+    margin: 0 auto;
+}
+
+@import 'blocks/header';
+@import 'blocks/buttons';
+@import 'blocks/advant';
+@import 'blocks/title';
+@import 'blocks/consult';
+@import 'blocks/form';
